# CKA-Hand-on-lab

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  helper.md  setup.sh
01_Storage/: README.md
01_Storage/solutions/: task2-persistent-volume.yaml  task4-pod-with-pvc.yaml  task5-dynamic-provisioning.yaml
01_Storage/user_solutions/: README.md
02_Workloads_Scheduling/: README.md
02_Workloads_Scheduling/solutions/: task2-pod-affinity.yaml  task3-horizontal-pod-autoscaler.yaml  task3-rollback.yaml  task4-pod-config-secret.yaml  task4-secret.yaml  task7-resource-limits.yaml
02_Workloads_Scheduling/user_solutions/: README.md
03_Servicing_Networking/: README.md
03_Servicing_Networking/solutions/: task3-ingress-resource.yaml  task4-service-connectivity.yaml  task5-multi-port-service.yaml
03_Servicing_Networking/user_solutions/: README.md
04_Troubleshooting/: README.md
04_Troubleshooting/solutions/: task3-service-selector-fix.yaml  task4-configmap-error-fix.yaml  task6-container-logs.yaml  task7-dns-resolution.yaml
04_Troubleshooting/user_solutions/: README.md
05_Cluster_Architecture/: README.md
05_Cluster_Architecture/solutions/: task3-custom-resource-definition.yaml  task5-etcd-backup.md
docs/: index.html
setup/: 01_setup_storage_lab.sh  02_setup_workloads_lab.sh  03_setup_networking_lab.sh  04_setup_troubleshooting_lab.sh  05_setup_cluster_arch_lab.sh  README.md  TUI_GUIDE.md  lab_launcher.sh  reset_lab_environment.sh  verify_solutions.sh
solutions/01_storage/: task1-storage-class.yaml  (+2 more)
src/: app.rs  main.rs
tasks/: schema.json
(+100 files in other folders)
